--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -591,6 +591,33 @@
     ]
   },
   {
+    "title": "Hai HCV Olympic 19 tuổi trở thành Gương mặt trẻ Việt Nam tiêu biểu 2024",
+    "content": "Hai nam sinh Nguyễn Hữu Tiến Hưng và Thân Thế Công đã được vinh danh là Gương mặt trẻ Việt Nam tiêu biểu năm 2024 nhờ thành tích xuất sắc tại các kỳ thi Olympic quốc tế. Tiến Hưng giành huy chương vàng Olympic Hóa học quốc tế 2024, trong khi Thân Thế Công giành huy chương vàng Olympic Vật lý quốc tế 2024. Cả hai đều là sinh viên năm nhất của Đại học Y Hà Nội và Đại học Bách khoa Hà Nội, và được tặng thưởng Huân chương Lao động hạng Nhì cho những thành tích này.",
+    "link": "https://dantri.com.vn/giao-duc/hai-hcv-olympic-19-tuoi-tro-thanh-guong-mat-tre-viet-nam-tieu-bieu-2024-20250319151237310.htm",
+    "cat": "giao-duc",
+    "positivity": 10,
+    "importance": 9,
+    "question": "Ai là hai Gương mặt trẻ Việt Nam tiêu biểu năm 2024?",
+    "answers": [
+      {
+        "text": "Nguyễn Hữu Tiến Hưng và Thân Thế Công",
+        "correct": true
+      },
+      {
+        "text": "Phạm Huy Hiệu và Nguyễn Viết Hương",
+        "correct": false
+      },
+      {
+        "text": "Hoàng Khắc Hiếu và Nguyễn Hoàng Hải Quang",
+        "correct": false
+      },
+      {
+        "text": "Trần Vĩnh Chiến và Trịnh Thu Vinh",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Lý Hoàng Nam nghỉ tennis, chuyển sang pickleball",
     "content": "Lý Hoàng Nam, tay vợt số một Việt Nam, đã quyết định tạm dừng sự nghiệp tennis sau hơn 20 năm để chuyển sang thi đấu pickleball. Tại lễ công bố trở thành đại sứ cho một thương hiệu thể thao, anh cho biết sẽ tập trung vào môn thể thao mới nổi này và đã có nhiều thành công ban đầu trong các giải đấu pickleball. Pickleball, một môn thể thao kết hợp giữa tennis, cầu lông và bóng bàn, đang phát triển mạnh mẽ tại Việt Nam và được nhiều vận động viên ưa chuộng.",
     "link": "https://vnexpress.net/ly-hoang-nam-nghi-tennis-chuyen-sang-pickleball-4863340.html",
@@ -1824,37 +1851,6 @@
     ]
   },
   {
-    "title": "'Mẹ bỉm sữa' giảm 7 kg trong hai tháng",
-    "content": "Chị Trang, 30 tuổi, đã giảm 7 kg trong hai tháng sau khi áp dụng chế độ ăn uống và tập luyện theo phác đồ của bác sĩ, thay vì nhịn ăn. Sau khi tăng 22 kg trong thời gian mang thai và gặp khó khăn trong việc giảm cân, chị đã tìm đến Trung tâm Kiểm soát cân nặng và được thiết kế một chế độ ăn đủ dinh dưỡng để đảm bảo chất lượng sữa cho con. Kết quả, chị không chỉ giảm cân mà còn cải thiện sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/me-bim-sua-giam-7-kg-trong-hai-thang-4863189.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Chị Trang đã giảm được bao nhiêu kg sau hai tháng điều trị?",
-    "answers": [
-      {
-        "text": "7 kg",
-        "correct": true
-      },
-      {
-        "text": "5 kg",
-        "correct": false
-      },
-      {
-        "text": "10 kg",
-        "correct": false
-      },
-      {
-        "text": "8 kg",
-        "correct": false
-      },
-      {
-        "text": "6 kg",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Dấu hiệu nào ở tay, vai cảnh báo ung thư phổi?",
     "content": "Ung thư phổi có thể gây ra các triệu chứng hô hấp như ho ra máu và khó thở. Ngoài ra, khi khối u đã lan rộng, nó có thể xuất hiện các dấu hiệu tại tay và vai, như là hiện tượng ngón tay và bả vai bị ảnh hưởng. Điều này cảnh báo người bệnh cần được kiểm tra kịp thời để phát hiện bệnh.",
     "link": "https://vnexpress.net/dau-hieu-nao-o-tay-vai-canh-bao-ung-thu-phoi-4863116.html",
@@ -1881,6 +1877,37 @@
       },
       {
         "text": "Chóng mặt",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "'Mẹ bỉm sữa' giảm 7 kg trong hai tháng",
+    "content": "Chị Trang, 30 tuổi, đã giảm 7 kg trong hai tháng sau khi áp dụng chế độ ăn uống và tập luyện theo phác đồ của bác sĩ, thay vì nhịn ăn. Sau khi tăng 22 kg trong thời gian mang thai và gặp khó khăn trong việc giảm cân, chị đã tìm đến Trung tâm Kiểm soát cân nặng và được thiết kế một chế độ ăn đủ dinh dưỡng để đảm bảo chất lượng sữa cho con. Kết quả, chị không chỉ giảm cân mà còn cải thiện sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/me-bim-sua-giam-7-kg-trong-hai-thang-4863189.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Chị Trang đã giảm được bao nhiêu kg sau hai tháng điều trị?",
+    "answers": [
+      {
+        "text": "7 kg",
+        "correct": true
+      },
+      {
+        "text": "5 kg",
+        "correct": false
+      },
+      {
+        "text": "10 kg",
+        "correct": false
+      },
+      {
+        "text": "8 kg",
+        "correct": false
+      },
+      {
+        "text": "6 kg",
         "correct": false
       }
     ]
@@ -3099,28 +3126,32 @@
     ]
   },
   {
-    "title": "Phấn hoa - nỗi ám ảnh của người Việt ở nước ngoài",
-    "content": "Bài viết đề cập đến nỗi ám ảnh của người Việt Nam sống ở nước ngoài, đặc biệt là tại Nhật Bản, do dị ứng phấn hoa. Nhiều người như Văn Phong và Hồng Hạnh phải bỏ công việc tốt để trở về quê hương vì không thể chịu đựng được triệu chứng dị ứng nặng nề trong mùa xuân. Dị ứng phấn hoa ảnh hưởng nghiêm trọng đến sức khỏe và chất lượng cuộc sống của họ, với tỷ lệ người mắc bệnh ngày càng gia tăng.",
-    "link": "https://vnexpress.net/phan-hoa-noi-am-anh-cua-nguoi-viet-o-nuoc-ngoai-4861536.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Dị ứng phấn hoa ảnh hưởng đến người Việt ở nước ngoài như thế nào?",
+    "title": "Diên mạo ga T3 Tân Sơn Nhất trước thời điểm hoạt động",
+    "content": "Ga T3 Tân Sơn Nhất đang trong giai đoạn hoàn thiện cuối cùng trước khi chính thức đi vào hoạt động vào ngày 30/4 tới. Với tổng đầu tư 11.000 tỷ đồng, nhà ga sẽ phục vụ 20 triệu hành khách mỗi năm, nâng tổng công suất của sân bay lên 50 triệu. Công trình gồm 4 tầng nổi và 1 tầng hầm, với nhiều hạng mục đã hoàn thiện như mái lợp nhôm, kính và các hệ thống hạ tầng giao thông kết nối. Khi đưa vào hoạt động, ga T3 sẽ chịu trách nhiệm cho khoảng 80% lượng khách nội địa, giảm tải cho ga T1 đang quá tải.",
+    "link": "https://vnexpress.net/dien-mao-ga-t3-tan-son-nhat-truoc-thoi-diem-hoat-dong-4862970.html",
+    "cat": "thoi-su",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Khi nào ga T3 Tân Sơn Nhất sẽ chính thức hoạt động?",
     "answers": [
       {
-        "text": "Nó khiến họ phải bỏ việc và trở về nước.",
+        "text": "30/4/2025",
         "correct": true
       },
       {
-        "text": "Nó không ảnh hưởng nhiều đến công việc.",
+        "text": "1/5/2025",
         "correct": false
       },
       {
-        "text": "Người mắc dị ứng phấn hoa luôn khỏe mạnh.",
+        "text": "15/5/2025",
         "correct": false
       },
       {
-        "text": "Mọi người đều thích mùa xuân và không lo lắng.",
+        "text": "1/6/2025",
+        "correct": false
+      },
+      {
+        "text": "30/3/2025",
         "correct": false
       }
     ]
@@ -3238,32 +3269,28 @@
     ]
   },
   {
-    "title": "Diên mạo ga T3 Tân Sơn Nhất trước thời điểm hoạt động",
-    "content": "Ga T3 Tân Sơn Nhất đang trong giai đoạn hoàn thiện cuối cùng trước khi chính thức đi vào hoạt động vào ngày 30/4 tới. Với tổng đầu tư 11.000 tỷ đồng, nhà ga sẽ phục vụ 20 triệu hành khách mỗi năm, nâng tổng công suất của sân bay lên 50 triệu. Công trình gồm 4 tầng nổi và 1 tầng hầm, với nhiều hạng mục đã hoàn thiện như mái lợp nhôm, kính và các hệ thống hạ tầng giao thông kết nối. Khi đưa vào hoạt động, ga T3 sẽ chịu trách nhiệm cho khoảng 80% lượng khách nội địa, giảm tải cho ga T1 đang quá tải.",
-    "link": "https://vnexpress.net/dien-mao-ga-t3-tan-son-nhat-truoc-thoi-diem-hoat-dong-4862970.html",
-    "cat": "thoi-su",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Khi nào ga T3 Tân Sơn Nhất sẽ chính thức hoạt động?",
+    "title": "Phấn hoa - nỗi ám ảnh của người Việt ở nước ngoài",
+    "content": "Bài viết đề cập đến nỗi ám ảnh của người Việt Nam sống ở nước ngoài, đặc biệt là tại Nhật Bản, do dị ứng phấn hoa. Nhiều người như Văn Phong và Hồng Hạnh phải bỏ công việc tốt để trở về quê hương vì không thể chịu đựng được triệu chứng dị ứng nặng nề trong mùa xuân. Dị ứng phấn hoa ảnh hưởng nghiêm trọng đến sức khỏe và chất lượng cuộc sống của họ, với tỷ lệ người mắc bệnh ngày càng gia tăng.",
+    "link": "https://vnexpress.net/phan-hoa-noi-am-anh-cua-nguoi-viet-o-nuoc-ngoai-4861536.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Dị ứng phấn hoa ảnh hưởng đến người Việt ở nước ngoài như thế nào?",
     "answers": [
       {
-        "text": "30/4/2025",
+        "text": "Nó khiến họ phải bỏ việc và trở về nước.",
         "correct": true
       },
       {
-        "text": "1/5/2025",
+        "text": "Nó không ảnh hưởng nhiều đến công việc.",
         "correct": false
       },
       {
-        "text": "15/5/2025",
+        "text": "Người mắc dị ứng phấn hoa luôn khỏe mạnh.",
         "correct": false
       },
       {
-        "text": "1/6/2025",
-        "correct": false
-      },
-      {
-        "text": "30/3/2025",
+        "text": "Mọi người đều thích mùa xuân và không lo lắng.",
         "correct": false
       }
     ]
@@ -4289,6 +4316,33 @@
     ]
   },
   {
+    "title": "4 điều cần biết về cơn ho",
+    "content": "Cơn ho là phản xạ tự nhiên giúp làm sạch đường hô hấp, thường kéo dài không quá hai tuần. Nếu ho dai dẳng hơn ba tuần, có thể do bệnh lý nghiêm trọng như nhiễm trùng, trào ngược dạ dày thực quản hoặc hen suyễn. Để phòng ngừa và giảm ho, việc uống đủ nước, thay đổi chế độ ăn uống và bỏ thuốc lá là rất quan trọng. Ngoài ra, rửa tay thường xuyên và tránh tiếp xúc với người bệnh cũng giúp giảm nguy cơ mắc bệnh.",
+    "link": "https://vnexpress.net/4-dieu-can-biet-ve-con-ho-4862670.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Những điều gì cần biết về cơn ho?",
+    "answers": [
+      {
+        "text": "Cơn ho thường kéo dài không quá hai tuần.",
+        "correct": true
+      },
+      {
+        "text": "Cơn ho luôn do virus gây ra.",
+        "correct": false
+      },
+      {
+        "text": "Ho không có tác dụng gì đối với sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Ho không liên quan đến việc uống nước.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "\"Vovinam Dance\": Kết hợp võ thuật với vũ đạo, sân chơi mới cho giới trẻ",
     "content": "Cuộc thi \"Vovinam Dance 2025\" vừa được tổ chức tại Hà Nội, do Đài PT-TH Hà Nội và Liên đoàn Vovinam Việt Nam phối hợp thực hiện. Đây là sự kiện kết hợp giữa võ thuật và nghệ thuật, nhằm tôn vinh kỷ niệm 50 năm Ngày Giải phóng miền Nam và 80 năm Quốc khánh Việt Nam. Cuộc thi không chỉ là sân chơi cho các võ sinh và vũ công mà còn là cơ hội để quảng bá văn hóa Vovinam ra thế giới, với tổng giải thưởng lên tới 550 triệu đồng.",
     "link": "https://dantri.com.vn/giai-tri/vovinam-dance-ket-hop-vo-thuat-voi-vu-dao-san-choi-moi-cho-gioi-tre-20250318203314904.htm",
@@ -4342,33 +4396,6 @@
       },
       {
         "text": "Protein động vật",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "4 điều cần biết về cơn ho",
-    "content": "Cơn ho là phản xạ tự nhiên giúp làm sạch đường hô hấp, thường kéo dài không quá hai tuần. Nếu ho dai dẳng hơn ba tuần, có thể do bệnh lý nghiêm trọng như nhiễm trùng, trào ngược dạ dày thực quản hoặc hen suyễn. Để phòng ngừa và giảm ho, việc uống đủ nước, thay đổi chế độ ăn uống và bỏ thuốc lá là rất quan trọng. Ngoài ra, rửa tay thường xuyên và tránh tiếp xúc với người bệnh cũng giúp giảm nguy cơ mắc bệnh.",
-    "link": "https://vnexpress.net/4-dieu-can-biet-ve-con-ho-4862670.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Những điều gì cần biết về cơn ho?",
-    "answers": [
-      {
-        "text": "Cơn ho thường kéo dài không quá hai tuần.",
-        "correct": true
-      },
-      {
-        "text": "Cơn ho luôn do virus gây ra.",
-        "correct": false
-      },
-      {
-        "text": "Ho không có tác dụng gì đối với sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Ho không liên quan đến việc uống nước.",
         "correct": false
       }
     ]
@@ -4825,91 +4852,6 @@
       },
       {
         "text": "Không thay đổi trong quy trình sản xuất",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Những thực phẩm phòng thoái hóa điểm vàng mắt",
-    "content": "Bài viết đề cập đến những thực phẩm giúp phòng ngừa thoái hóa điểm vàng mắt, một bệnh lý liên quan đến tuổi tác. Các loại thực phẩm như trái cây họ cam quýt, rau củ, các loại hạt và cá béo chứa nhiều vitamin và omega-3, có tác dụng bảo vệ sức khỏe mắt và làm chậm tiến triển của bệnh. Bài viết cũng nhấn mạnh tầm quan trọng của chế độ dinh dưỡng hợp lý để duy trì thị lực và giảm nguy cơ mắc các bệnh về mắt.",
-    "link": "https://vnexpress.net/nhung-thuc-pham-phong-thoai-hoa-diem-vang-mat-4862809.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những thực phẩm nào giúp phòng ngừa thoái hóa điểm vàng mắt?",
-    "answers": [
-      {
-        "text": "Trái cây họ cam quýt và cá hồi",
-        "correct": true
-      },
-      {
-        "text": "Thịt đỏ và bánh ngọt",
-        "correct": false
-      },
-      {
-        "text": "Rau củ chiên và nước ngọt",
-        "correct": false
-      },
-      {
-        "text": "Thực phẩm chế biến sẵn và đồ uống có ga",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Dấu hiệu nào cho thấy bạn bị suy giãn tĩnh mạch?",
-    "content": "Bài viết đề cập đến các dấu hiệu cho thấy bạn có thể bị suy giãn tĩnh mạch, bao gồm cảm giác đau, mỏi và tê bì ở tay chân hoặc chuột rút. Những triệu chứng này không phải lúc nào cũng dễ dàng nhận biết, khiến cho việc phát hiện bệnh trở nên khó khăn. Nếu bạn gặp phải những triệu chứng này, nên tham khảo ý kiến của các chuyên gia y tế để được kiểm tra và tư vấn.",
-    "link": "https://vnexpress.net/dau-hieu-nao-cho-thay-ban-bi-suy-gian-tinh-mach-4862849.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Những dấu hiệu nào cho thấy bạn có thể bị suy giãn tĩnh mạch?",
-    "answers": [
-      {
-        "text": "Cảm giác đau, mỏi và tê bì tay chân",
-        "correct": true
-      },
-      {
-        "text": "Đau đầu và chóng mặt",
-        "correct": false
-      },
-      {
-        "text": "Đau bụng và tiêu chảy",
-        "correct": false
-      },
-      {
-        "text": "Mệt mỏi và khó thở",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Người Việt chi 6.300 tỉ đồng mua cá hồi, cua hoàng đế, cá saba... từ Na Uy trong năm 2024",
-    "content": "Người Việt đã chi tới 6.300 tỉ đồng để nhập khẩu hải sản từ Na Uy trong năm 2024, với hơn 70.000 tấn hải sản được xuất khẩu sang Việt Nam. Trong đó, cá hồi chiếm hơn 30% tổng lượng hàng hóa, đạt hơn 24.000 tấn. Việt Nam hiện đứng thứ năm trong nhóm thị trường tăng trưởng nhanh nhất đối với hải sản Na Uy, phản ánh nhu cầu ngày càng cao đối với các sản phẩm hải sản cao cấp và bền vững.",
-    "link": "https://tuoitre.vn/nguoi-viet-chi-6-300-ti-dong-mua-ca-hoi-cua-hoang-de-ca-saba-tu-na-uy-trong-nam-2024-20250318151048822.htm",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Người Việt chi bao nhiêu tiền để mua hải sản từ Na Uy trong năm 2024?",
-    "answers": [
-      {
-        "text": "6.300 tỉ đồng",
-        "correct": true
-      },
-      {
-        "text": "5.000 tỉ đồng",
-        "correct": false
-      },
-      {
-        "text": "7.500 tỉ đồng",
-        "correct": false
-      },
-      {
-        "text": "4.000 tỉ đồng",
-        "correct": false
-      },
-      {
-        "text": "8.000 tỉ đồng",
         "correct": false
       }
     ]
