--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,37 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Bộ Y tế lập 6 đoàn kiểm tra tiêm vaccine sởi",
+    "content": "Bộ Y tế đã thành lập 6 đoàn kiểm tra để giám sát việc tiêm vaccine sởi tại các địa phương có số ca sởi tăng cao và tiêm vaccine chậm. Quyết định này được đưa ra trong bối cảnh dịch sởi gia tăng với khoảng 40.000 ca nghi mắc và 5 ca tử vong. Thứ trưởng Y tế Nguyễn Thị Liên Hương nhấn mạnh tầm quan trọng của vaccine trong việc kiểm soát dịch bệnh, đồng thời đưa ra 5 khuyến cáo phòng chống bệnh sởi cho các bậc phụ huynh.",
+    "link": "https://vnexpress.net/bo-y-te-lap-6-doan-kiem-tra-tiem-vaccine-soi-4863336.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 9,
+    "question": "Bộ Y tế đã thực hiện những gì để kiểm soát dịch sởi?",
+    "answers": [
+      {
+        "text": "Lập 6 đoàn kiểm tra tiêm vaccine sởi",
+        "correct": true
+      },
+      {
+        "text": "Tăng cường quảng bá vaccine",
+        "correct": false
+      },
+      {
+        "text": "Thay đổi chính sách tiêm chủng",
+        "correct": false
+      },
+      {
+        "text": "Hủy bỏ các chương trình tiêm chủng",
+        "correct": false
+      },
+      {
+        "text": "Không thực hiện hành động nào",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Báo Mỹ: Washington cân nhắc từ bỏ vai trò 75 năm ở NATO",
     "content": "Chính quyền Tổng thống Mỹ Donald Trump đang xem xét khả năng từ bỏ vai trò lãnh đạo của Mỹ trong NATO, một vai trò đã duy trì suốt 75 năm qua. Tin tức này được đưa ra sau khi Tổng thống Trump và Bộ trưởng Quốc phòng yêu cầu các đồng minh NATO tăng cường chi tiêu quân sự. Nếu Washington quyết định từ bỏ vị trí Tổng Tư lệnh Tối cao Lực lượng Đồng minh tại châu Âu, điều này có thể làm suy yếu đáng kể ảnh hưởng của Mỹ trong liên minh và gây căng thẳng quan hệ với các thành viên NATO.",
     "link": "https://dantri.com.vn/the-gioi/bao-my-washington-can-nhac-tu-bo-vai-tro-75-nam-o-nato-20250319155643052.htm",
@@ -103,6 +134,37 @@
       },
       {
         "text": "Vai trò văn hóa",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nhan sắc bà xã là \"hoa hậu phố cổ\", nắm kinh tế của Xuân Hinh",
+    "content": "Nghệ sĩ Xuân Hinh đã kết hôn với vợ mình, Nguyễn Phương Lan, trong suốt 30 năm và luôn dành những lời khen ngợi cho bà xã. Ông chia sẻ rằng vợ mình là người chăm chỉ và có khả năng quản lý tài chính gia đình. Dù là một nghệ sĩ nổi tiếng, Xuân Hinh cho biết ông luôn để vợ nắm giữ mọi công việc trong nhà và không bao giờ dám \"bật\" lại vợ. Hai người có hai con, một gái và một trai, cả hai đều đang du học ở nước ngoài.",
+    "link": "https://dantri.com.vn/giai-tri/nhan-sac-ba-xa-la-hoa-hau-pho-co-nam-kinh-te-cua-xuan-hinh-20250318174652354.htm",
+    "cat": "gia-dinh",
+    "positivity": 9,
+    "importance": 6,
+    "question": "Xuân Hinh và vợ đã kết hôn được bao lâu?",
+    "answers": [
+      {
+        "text": "30 năm",
+        "correct": true
+      },
+      {
+        "text": "20 năm",
+        "correct": false
+      },
+      {
+        "text": "15 năm",
+        "correct": false
+      },
+      {
+        "text": "25 năm",
+        "correct": false
+      },
+      {
+        "text": "10 năm",
         "correct": false
       }
     ]
@@ -1125,33 +1187,6 @@
     ]
   },
   {
-    "title": "Đau lưng có phải triệu chứng bệnh thần kinh?",
-    "content": "Đau lưng thường được cho là do các vấn đề liên quan đến xương khớp. Tuy nhiên, trong một số trường hợp, tình trạng này có thể là triệu chứng của tổn thương dây thần kinh. Do đó, cần chú ý đến các dấu hiệu và triệu chứng kèm theo để xác định nguyên nhân chính xác hơn.",
-    "link": "https://vnexpress.net/dau-lung-co-phai-trieu-chung-benh-than-kinh-4863101.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 6,
-    "question": "Đau lưng có phải là triệu chứng của bệnh thần kinh không?",
-    "answers": [
-      {
-        "text": "Có, đau lưng có thể là triệu chứng của bệnh thần kinh.",
-        "correct": true
-      },
-      {
-        "text": "Không, đau lưng chỉ do xương khớp.",
-        "correct": false
-      },
-      {
-        "text": "Đau lưng không liên quan đến thần kinh.",
-        "correct": false
-      },
-      {
-        "text": "Đau lưng chỉ là vấn đề tạm thời.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hãng ô tô Audi cắt giảm hàng nghìn việc làm ở Đức",
     "content": "Hãng ô tô Audi đã quyết định cắt giảm 7.500 việc làm tại Đức, tương đương 8% lực lượng lao động toàn cầu của hãng, nhằm đối phó với những thách thức trong ngành ô tô hiện nay, bao gồm nhu cầu chậm lại đối với xe điện và sự cạnh tranh gia tăng. Quyết định này dự kiến sẽ được thực hiện vào cuối năm 2029 thông qua các hình thức sa thải tự nguyện và chấm dứt hợp đồng. Chủ tịch Audi cũng nhấn mạnh rằng sẽ không có sa thải bắt buộc cho đến năm 2033, nhằm bảo đảm việc làm cho nhân viên trong bối cảnh kinh tế khó khăn.",
     "link": "https://tuoitre.vn/hang-o-to-audi-cat-giam-hang-nghin-viec-lam-o-duc-20250318171943316.htm",
@@ -1174,6 +1209,33 @@
       },
       {
         "text": "Để mở rộng thị trường sang châu Á.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đau lưng có phải triệu chứng bệnh thần kinh?",
+    "content": "Đau lưng thường được cho là do các vấn đề liên quan đến xương khớp. Tuy nhiên, trong một số trường hợp, tình trạng này có thể là triệu chứng của tổn thương dây thần kinh. Do đó, cần chú ý đến các dấu hiệu và triệu chứng kèm theo để xác định nguyên nhân chính xác hơn.",
+    "link": "https://vnexpress.net/dau-lung-co-phai-trieu-chung-benh-than-kinh-4863101.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Đau lưng có phải là triệu chứng của bệnh thần kinh không?",
+    "answers": [
+      {
+        "text": "Có, đau lưng có thể là triệu chứng của bệnh thần kinh.",
+        "correct": true
+      },
+      {
+        "text": "Không, đau lưng chỉ do xương khớp.",
+        "correct": false
+      },
+      {
+        "text": "Đau lưng không liên quan đến thần kinh.",
+        "correct": false
+      },
+      {
+        "text": "Đau lưng chỉ là vấn đề tạm thời.",
         "correct": false
       }
     ]
@@ -1604,37 +1666,6 @@
     ]
   },
   {
-    "title": "Dấu hiệu nào ở tay, vai cảnh báo ung thư phổi?",
-    "content": "Ung thư phổi có thể gây ra các triệu chứng hô hấp như ho ra máu và khó thở. Ngoài ra, khi khối u đã lan rộng, nó có thể xuất hiện các dấu hiệu tại tay và vai, như là hiện tượng ngón tay và bả vai bị ảnh hưởng. Điều này cảnh báo người bệnh cần được kiểm tra kịp thời để phát hiện bệnh.",
-    "link": "https://vnexpress.net/dau-hieu-nao-o-tay-vai-canh-bao-ung-thu-phoi-4863116.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Những dấu hiệu nào ở tay và vai có thể cảnh báo ung thư phổi?",
-    "answers": [
-      {
-        "text": "Triệu chứng ngón tay, bả vai bị ảnh hưởng",
-        "correct": true
-      },
-      {
-        "text": "Đau đầu",
-        "correct": false
-      },
-      {
-        "text": "Đau lưng",
-        "correct": false
-      },
-      {
-        "text": "Mệt mỏi",
-        "correct": false
-      },
-      {
-        "text": "Chóng mặt",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "'Mẹ bỉm sữa' giảm 7 kg trong hai tháng",
     "content": "Chị Trang, 30 tuổi, đã giảm 7 kg trong hai tháng sau khi áp dụng chế độ ăn uống và tập luyện theo phác đồ của bác sĩ, thay vì nhịn ăn. Sau khi tăng 22 kg trong thời gian mang thai và gặp khó khăn trong việc giảm cân, chị đã tìm đến Trung tâm Kiểm soát cân nặng và được thiết kế một chế độ ăn đủ dinh dưỡng để đảm bảo chất lượng sữa cho con. Kết quả, chị không chỉ giảm cân mà còn cải thiện sức khỏe tổng thể.",
     "link": "https://vnexpress.net/me-bim-sua-giam-7-kg-trong-hai-thang-4863189.html",
@@ -1661,6 +1692,37 @@
       },
       {
         "text": "6 kg",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Dấu hiệu nào ở tay, vai cảnh báo ung thư phổi?",
+    "content": "Ung thư phổi có thể gây ra các triệu chứng hô hấp như ho ra máu và khó thở. Ngoài ra, khi khối u đã lan rộng, nó có thể xuất hiện các dấu hiệu tại tay và vai, như là hiện tượng ngón tay và bả vai bị ảnh hưởng. Điều này cảnh báo người bệnh cần được kiểm tra kịp thời để phát hiện bệnh.",
+    "link": "https://vnexpress.net/dau-hieu-nao-o-tay-vai-canh-bao-ung-thu-phoi-4863116.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Những dấu hiệu nào ở tay và vai có thể cảnh báo ung thư phổi?",
+    "answers": [
+      {
+        "text": "Triệu chứng ngón tay, bả vai bị ảnh hưởng",
+        "correct": true
+      },
+      {
+        "text": "Đau đầu",
+        "correct": false
+      },
+      {
+        "text": "Đau lưng",
+        "correct": false
+      },
+      {
+        "text": "Mệt mỏi",
+        "correct": false
+      },
+      {
+        "text": "Chóng mặt",
         "correct": false
       }
     ]
@@ -2539,28 +2601,28 @@
     ]
   },
   {
-    "title": "Nhiều nhân giáp gây nổi bướu vùng cổ người phụ nữ",
-    "content": "Bài viết mô tả trường hợp của chị Hiền, 54 tuổi, ở TP.HCM, bị bướu giáp đa nhân sau khi phát hiện nổi u ở cổ. Qua chẩn đoán, bác sĩ xác định chị mắc ung thư biểu mô tuyến giáp thể nhú biến thể nang, tuy nhiên bệnh có tiên lượng tốt với tỷ lệ sống trên 5 năm hơn 98%. Sau ca phẫu thuật thành công, bệnh nhân hồi phục nhanh chóng và cần theo dõi định kỳ để phòng ngừa.",
-    "link": "https://vnexpress.net/nhieu-nhan-giap-gay-noi-buou-vung-co-nguoi-phu-nu-4862920.html",
+    "title": "Bạch cầu tăng gấp 20 lần do ung thư máu nhưng không triệu chứng",
+    "content": "Anh Mạnh, 32 tuổi, đã phát hiện bệnh ung thư máu khi đi khám sức khỏe vì thừa cân. Kết quả xét nghiệm cho thấy lượng bạch cầu của anh tăng gấp 20 lần so với mức bình thường, điều này là dấu hiệu cho thấy bệnh đang tiến triển mà không có triệu chứng rõ ràng. Các bác sĩ đã xác định anh mắc bạch cầu cấp loại M4, một dạng ung thư máu nguy hiểm, và đang tiến hành điều trị tích cực nhằm giảm số lượng bạch cầu và ngăn chặn sự phát triển của tế bào ác tính.",
+    "link": "https://vnexpress.net/bach-cau-tang-gap-20-lan-do-ung-thu-mau-nhung-khong-trieu-chung-4862874.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Chị Hiền mắc bệnh gì sau khi nổi bướu ở cổ?",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tại sao bạch cầu của anh Mạnh lại tăng cao đến 20 lần?",
     "answers": [
       {
-        "text": "Ung thư biểu mô tuyến giáp thể nhú biến thể nang",
+        "text": "Vì anh Mạnh mắc ung thư máu.",
         "correct": true
       },
       {
-        "text": "Bệnh tim mạch",
+        "text": "Vì anh Mạnh bị nhiễm virus.",
         "correct": false
       },
       {
-        "text": "Tiểu đường",
+        "text": "Vì anh Mạnh ăn uống không điều độ.",
         "correct": false
       },
       {
-        "text": "Bệnh phổi mãn tính",
+        "text": "Vì anh Mạnh thường xuyên tập thể dục.",
         "correct": false
       }
     ]
@@ -2593,28 +2655,28 @@
     ]
   },
   {
-    "title": "Bạch cầu tăng gấp 20 lần do ung thư máu nhưng không triệu chứng",
-    "content": "Anh Mạnh, 32 tuổi, đã phát hiện bệnh ung thư máu khi đi khám sức khỏe vì thừa cân. Kết quả xét nghiệm cho thấy lượng bạch cầu của anh tăng gấp 20 lần so với mức bình thường, điều này là dấu hiệu cho thấy bệnh đang tiến triển mà không có triệu chứng rõ ràng. Các bác sĩ đã xác định anh mắc bạch cầu cấp loại M4, một dạng ung thư máu nguy hiểm, và đang tiến hành điều trị tích cực nhằm giảm số lượng bạch cầu và ngăn chặn sự phát triển của tế bào ác tính.",
-    "link": "https://vnexpress.net/bach-cau-tang-gap-20-lan-do-ung-thu-mau-nhung-khong-trieu-chung-4862874.html",
+    "title": "Nhiều nhân giáp gây nổi bướu vùng cổ người phụ nữ",
+    "content": "Bài viết mô tả trường hợp của chị Hiền, 54 tuổi, ở TP.HCM, bị bướu giáp đa nhân sau khi phát hiện nổi u ở cổ. Qua chẩn đoán, bác sĩ xác định chị mắc ung thư biểu mô tuyến giáp thể nhú biến thể nang, tuy nhiên bệnh có tiên lượng tốt với tỷ lệ sống trên 5 năm hơn 98%. Sau ca phẫu thuật thành công, bệnh nhân hồi phục nhanh chóng và cần theo dõi định kỳ để phòng ngừa.",
+    "link": "https://vnexpress.net/nhieu-nhan-giap-gay-noi-buou-vung-co-nguoi-phu-nu-4862920.html",
     "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Tại sao bạch cầu của anh Mạnh lại tăng cao đến 20 lần?",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Chị Hiền mắc bệnh gì sau khi nổi bướu ở cổ?",
     "answers": [
       {
-        "text": "Vì anh Mạnh mắc ung thư máu.",
+        "text": "Ung thư biểu mô tuyến giáp thể nhú biến thể nang",
         "correct": true
       },
       {
-        "text": "Vì anh Mạnh bị nhiễm virus.",
+        "text": "Bệnh tim mạch",
         "correct": false
       },
       {
-        "text": "Vì anh Mạnh ăn uống không điều độ.",
+        "text": "Tiểu đường",
         "correct": false
       },
       {
-        "text": "Vì anh Mạnh thường xuyên tập thể dục.",
+        "text": "Bệnh phổi mãn tính",
         "correct": false
       }
     ]
